--- a/订阅关系一致性.md
+++ b/订阅关系一致性.md
@@ -1,4 +1,4 @@
-订阅关系一致指的是同一个消费者 Group ID 下所有 Consumer 实例所订阅的 Topic 、Tag 必须完全一致。
+![image](https://github.com/openHj/rocketMQ_cumulation/assets/162397625/8c65dcf3-a76b-4c54-9789-f571e05f3bd6)订阅关系一致指的是同一个消费者 Group ID 下所有 Consumer 实例所订阅的 Topic 、Tag 必须完全一致。
 
 如果订阅关系不一致，消息消费的逻辑就会混乱，甚至导致消息丢失。
 
